# Subventions-robot-art-culture

./: .env.example  .gitignore  GUIDE.md  README.md  lancer_veille.bat  lancer_veille.sh  pyproject.toml  requirements.txt  sources.json  specifications-veille-subventions.md
appscript/: Code.gs
scripts/: exporter_excel.py  initialiser_feuille.py
tests/: test_veille.py
veille/: __init__.py  categorisation.py  classeur.py  config.py  dedoublonnage.py  extracteur.py  feuille.py  feuille_appscript.py  main.py  models.py
