[project]
name = "veille-subventions"
version = "0.1.0"
description = "Veille quotidienne des subventions en art et culture (Mauricie) — scraping pur + Google Sheets"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "gspread>=6.1",
    "pydantic>=2.7",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "openpyxl>=3.1"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["veille"]
